src/objects/RM_Score_Evaluation_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Contact_Status_after_Response__c</fullName>
        <description>This is the status value to set on the Contact Status field (FCR_Status__c) during contact updates</description>
        <label>Contact Status after Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger_Field__c</fullName>
        <description>This is the contact field that the application monitors for an update; It can be a number field, a text field or Boolean field.</description>
        <label>Contact Trigger Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts_Allowed_Additional_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts Allowed Additional Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Campaign_ID__c</fullName>
        <label>Default Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Member_Status__c</fullName>
        <label>Default Member Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Converted_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox field that indicates that if the lead has been converted during the timeframe- go ahead and continue functionality on the converted contact (re-open or associate response).</description>
        <label>Follow Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Status_after_Response__c</fullName>
        <description>This is the status value to set on the Lead Status field (Status) during lead updates</description>
        <label>Lead Status after Response</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Trigger_Field__c</fullName>
        <description>This is the lead field that the application monitors for an update; It can be a number field, a text field or Boolean field.</description>
        <label>Lead Trigger Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status_Values__c</fullName>
        <defaultValue>&quot;Resolved - Already Engaged,Resolved - No Action Required&quot;</defaultValue>
        <description>Response status that would be subject to re-opening based on the Response Status Value.</description>
        <label>Response Status Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status_to_Set__c</fullName>
        <description>This is the status value to set on the campaign member response status (FCR_Response_Status__c) field during campaign member updates</description>
        <label>Response Status to Set</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Timeframe_Days__c</fullName>
        <defaultValue>7</defaultValue>
        <description>This is the search timeframe to look back to re-open responses.  It is cumulative with Search Timeframe Minutes.</description>
        <label>Search Timeframe Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Timeframe_Minutes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Search Timeframe Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Delay_for_Evaluation__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Time, in minutes, to wait before evaluating whether or not there is a response to re-open or one to associate. Time delay applies across converted leads as well.</description>
        <label>Time Delay for Evaluation</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RM Score Evaluation Setting</label>
</CustomObject>